Fix logo height to prevent overflow

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ section.show{
 #SearchLogoDisplay{
 	grid-area: logo;
 	width: auto;
-	height: 100%;
+	height: 3rem;
 }
 
 #searchInput{
